--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Administrative_prod
 APP_ENV=local
 APP_KEY=base64:YgbX43BirZr9G1F3UHpX1neu5REtUqYHZaHd4Hi9Fwg=
 APP_DEBUG=true
-APP_URL=http://klinik.test
+APP_URL=http://office_prod.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
